@@ -4,6 +4,9 @@
 // this is thread-local
 bool GSensitiveDetector::skipProcessHit(double energy)
 {
+
+	// flowMessage("Processing Hits in GSensitiveDetector " + GetName());
+
 	
 	return false;
 }
